<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/here">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:background="#E0EEEE"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/create_new_activity"
            android:textColor="#000"
            android:textSize="28sp"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/activity_name"
            android:textSize="20sp"
            android:textColor="#000"
            android:layout_margin="10dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id = "@+id/et_NEWACTIVITY_actvitiyName"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:background="#ffffff"
            android:padding="2dp" />

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/activity_date"
            android:textSize="20sp"
            android:textColor="#000"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Pick a Date"
            android:onClick="showDatePickerDialog"
            android:visibility="visible"
            android:id="@+id/button"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/et_NEWACTIVITY_activityDate"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:inputType="datetime"
            android:background="#ffffff"
            android:padding="2dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/activity_time"
            android:textSize="20sp"
            android:textColor="#000"
            android:layout_margin="10dp"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Pick a Time"
            android:onClick="showTimePickerDialog"
            android:visibility="visible"
            android:id="@+id/timePickah" />

        <EditText
            android:id = "@+id/et_NEWACTIVITY_actvitiyTime"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:inputType="datetime"
            android:background="#ffffff"
            android:padding="2dp" />

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/activity_location"
            android:textSize="20sp"
            android:textColor="#000"
            android:layout_margin="10dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id = "@+id/et_NEWACTIVITY_actvitiyLoc"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:background="#ffffff"
            android:padding="2dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/activity_tags"
                android:textSize="20sp"
                android:textColor="#000"
                android:layout_margin="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/tagFormatting"
                android:textStyle="italic"
                android:textSize="12sp"
                android:textColor="#000"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp" />

        </LinearLayout>

        <EditText
            android:id = "@+id/et_NEWACTIVITY_tags"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:inputType="text"
            android:background="#ffffff" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/activity_contact"
                android:textSize="20sp"
                android:textColor="#000"
                android:layout_margin="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:textStyle="italic"
                android:textSize="12sp"
                android:textColor="#000"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/contactFormatting"/>

        </LinearLayout>

        <EditText
            android:id = "@+id/et_NEWACTIVITY_contact"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:inputType="phone"
            android:background="#ffffff" />


        <TextView
            android:layout_width="wrap_content"
            android:text="@string/activity_capacity"
            android:textSize="20sp"
            android:textColor="#000"
            android:layout_margin="10dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id = "@+id/et_NEWACTIVITY_capacity"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:inputType="number"
            android:background="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/activity_desc"
            android:textSize="20sp"
            android:textColor="#000"
            android:layout_margin="10dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id = "@+id/et_NEWACTIVITY_desc"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_marginBottom="10dp"
            android:padding="2dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:scrollHorizontally="false"
            android:background="#ffffff"
            android:longClickable="false" />

        <Button
            android:layout_width="fill_parent"
            android:text="@string/submit_new_activity"
            android:textSize="20sp"
            android:textColor="#4f4f4f"
            android:background="#65ee83"
            android:id="@+id/bt_NEWACTIVITY_submit"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="30dp"/>

    </LinearLayout>

</ScrollView>