...
        android:textSize="16dp" />

    <Button
        android:id="@+id/viewEventsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/createNewEventButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:onClick="viewEventsButtonOnClick"
        android:text="@string/activity_Main_Checkout_Events"
...
